# stellar_matchmaker

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  Organize.py  README.md  Stellar_param.py  end_to_end_test.py  observation.py  plot_stellar_matchmaker.py  pyproject.toml  requirement.txt  run_python.py  run_shell.sh  stellar_matchmaker.py  unit_test.py
docs/: Organize.rst  conf.py  index.rst  organize.rst  plot_stellar_matchmaker.rst  requirements.txt  stellar_matchmaker.rst
docs/_build/doctrees/: Organize.doctree  environment.pickle  index.doctree  observation.doctree  plot_stellar_matchmaker.doctree  stellar_matchmaker.doctree  stellar_param.doctree
docs/_build/html/: .buildinfo  Organize.html  genindex.html  index.html  objects.inv  observation.html  plot_stellar_matchmaker.html  py-modindex.html  search.html  searchindex.js  stellar_matchmaker.html  stellar_param.html
docs/_build/html/_sources/: index.rst.txt  observation.rst.txt  plot_stellar_matchmaker.rst.txt  stellar_matchmaker.rst.txt  stellar_param.rst.txt
stellar_matchmaker/: .plot_stellar_matchmaker.py.swp  Organize.py  observation.py  plot_stellar_matchmaker.py  stellar_matchmaker.py  stellar_param.py
stellar_matchmaker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
