[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build.meta"

[project]
name = "stellar_matchmaker"
version= "0.0.1"
authors = [
  { name="Oisín Creaner", email="oisin.creaner@dcu.ie" },
  { name="Taehwa Yoo", email="t.yoo@ufl.edu" },
  { name="Vidya Venkatesan", email="vidyav1@uci.edu" },
  { name="Kene Anumba", email="jka29@duke.edu" }
]
dependencies = [
    "numpy", "astropy", "matplotlib", "astroquery"
]
