[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar_matchmaker"
version= "0.0.2"
authors = [
  { name="Oisín Creaner", email="oisin.creaner@dcu.ie" },
  { name="Taehwa Yoo", email="t.yoo@ufl.edu" },
  { name="Vidya Venkatesan", email="vidyav1@uci.edu" },
  { name="Kene Anumba", email="jka29@duke.edu" }
]
description = "A package to identify and select reference stars by colour and magnitude"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy", "astropy", "matplotlib", "astroquery"
]
